tests/NormalTests/paczka2/big_fuzzy/38913647.err
Error in line 2: dpl S143 32,2
Error in line 3: dpl A713 35,0
Error in line 12: MpWPL A113 87,8
Error in line 16: vrA A713 914,4
Error in line 28: cYTi A113 34,3
Error in line 29: cYTi A713 59,5
Error in line 32: MpWPL A113 90,5
Error in line 44: dpl A113 76,9
Error in line 41: A113 S936 289,3
Error in line 18: eoBX1pOdYU S936 37,9
Error in line 59: eoBX1pOdYU A713 14,2
Error in line 63: MpWPL S936 53,5
Error in line 68: eoBXfpOdYU S936 9f,3
Error in line 71: dpl S143 87,6
Error in line 78: dpl A713 96,6
Error in line 80: cYTi S143 86,3
Error in line 75: MpWPL A113 363,6
Error in line 92: eoBX1pOdYU S936 251,8
Error in line 94: vrA A713 98,0
Error in line 96: eoBX1pOdYU S143 56,8
Error in line 88: cYTi A713 25,5
Error in line 108: A113 A113 54,8
Error in line 110: gI144PmY A713 78,0
Error in line 136: A113 A113 14,9
Error in line 146: gI144PmY A113 81,78
Error in line 133: gI144PmY S936 0,0
Error in line 159: A113 S936 61,9
Error in line 161: A113 A113 44,8
Error in line 168: dpl S143 22,7
Error in line 176: gI144PmY S143 60,2
Error in line 180: gI144PmY A713 81,1
Error in line 181: dpl A713 35,3
Error in line 172: A113 S936 87,3
Error in line 186: A113 S143 79,0
Error in line 178: vrA S936 37,1
Error in line 200: eoBX1pOdYU S143 78,0
Error in line 215: eoBX1pOdYUmA113m26,4
Error in line 220: gI144PmY A71e 0,0
Error in line 225: eoBX1pOdYU S143 24,35
Error in line 218: dpl S143 99,5
Error in line 240: gI144PmY A713 30,7
Error in line 222: eoBX1pOdYU S143 20,4
Error in line 238: A113 A713 59,9
Error in line 235: MpWPL A713 381,5
